# Rshell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
src/: and.h  base.h  command.h  doubleoredirect.h  expressionbuilder.h  iredirect.h  operator.h  or.h  oredirect.h  parser.h  pipe.h  rshell.cpp  semicolon.h  test_command.h
tests/: a.out  expressionbuildertest.cpp  expressionprecedencetest.cpp  expressiontestcommand.cpp  parserprecedencetest.cpp  parsertest.cpp  parsertestcommand.cpp  redirectiontest.cpp  test.cpp
